# sopromat

./: .gitignore  README.md
1d/src/: CMakeLists.txt  main.cpp
1d/src/headers/: element.hpp  force.hpp
1d/src/sources/: dot.cpp  element.cpp
2d/src/: main.cpp
2d/src/headers/: dot.hpp  element.hpp
2d/src/sources/: element.cpp  force.cpp
